--- a/bch.cabal
+++ b/bch.cabal
@@ -19,6 +19,8 @@ library
   build-depends:       base >= 4.7 && < 5
                      , cryptohash
                      , bytestring
+                     , base16-bytestring
+                     , utf8-string
   default-language:    Haskell2010
 
 executable bch-exe
