--- a/bch.cabal
+++ b/bch.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , aeson
                      , cryptohash
                      , bytestring
                      , base16-bytestring
@@ -28,8 +29,13 @@ executable bch-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , aeson
                      , bch
                      , bytestring
+                     , mtl
+                     , Spock
+                     , Spock-core
+                     , text
   default-language:    Haskell2010
 
 test-suite bch-test
